--- a/Develop/assets/css/styles.css
+++ b/Develop/assets/css/styles.css
@@ -65,7 +65,7 @@ ul {
 }
 
 * {
-  transition: background-color ease-in .5s;
+  transition: background-color ease-in 0.5s;
 }
 
 /*
@@ -80,6 +80,22 @@ header {
 header,
 footer {
   padding: 2rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: rows;
+  align-items: center;
+  width: 100%;
+}
+
+nav div {
+  display: flex;
+  flex-direction: rows;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
 }
 
 main {
@@ -105,11 +121,10 @@ footer {
   color: var(--light);
 }
 
-
 .dark main {
   background-color: var(--dark-accent);
   color: var(--light);
-  border-top: solid .5rem var(--disabled);
+  border-top: solid 0.5rem var(--disabled);
 }
 
 .light header,
@@ -133,5 +148,5 @@ object #toggle {
   background: transparent;
   border: none;
   cursor: pointer;
-  text-shadow: 0px 0px .5rem var(--light-accent);
+  text-shadow: 0px 0px 0.5rem var(--light-accent);
 }
